cleaned up the menu manager